--- a/index-1.html
+++ b/index-1.html
@@ -1,48 +1,102 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+        rel="stylesheet">
 
     <link rel="stylesheet" href="/style-1/style-1.css">
     <title>Project Programming hero 2</title>
 </head>
+
 <body>
     <header class="header">
-            <div class="header-content-parent-div">
-                <h3>All Thinks Are Possible If You believe</h3>
-                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words</p>
-                
-                <button class="btn-primary">Contact Us</button>
-            </div>
+        <div class="header-content-parent-div">
+            <h3>All Thinks Are Possible If You believe</h3>
+            <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration
+                in some form, by injected humour, or randomised words</p>
+
+            <button class="btn-primary">Contact Us</button>
+        </div>
     </header>
 
 
 
     <main>
-            <div class="main-contenar-parent-div">
-                <div class="main-contenar-parent-div-1">
-                    <img src="/images/person.png" alt="">
-                </div>
-                <div class="main-contenar-parent-div-1">
-                    <h2>My failures of previous year</h2>
-                    <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock.</p>
-                    <ul class="main-icon-list">
-                        <li><img src="/images/icons/check.png" alt=""> Contrary to popular belief, is not simply.</li>
-                        <li><img src="/images/icons/check.png" alt=""> Contrary to popular belief.</li>
-                        <li><img src="/images/icons/check.png" alt=""> Contrary to popular , is not simply.</li>
-                        <li><img src="/images/icons/check.png" alt=""> Contrary to popular belief, is not simply.</li>
-                        <li><img src="/images/icons/check.png" alt=""> Contrary to popular simply.</li>
-                    </ul>
-                </div>
+        <div class="main-contenar-parent-div">
+            <div class="main-contenar-parent-div-1">
+                <img src="/images/person.png" alt="">
             </div>
+            <div class="main-contenar-parent-div-1">
+                <h2>My failures of previous year</h2>
+                <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of
+                    classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock.</p>
+                <ul class="main-icon-list">
+                    <li><img src="/images/icons/check.png" alt=""> Contrary to popular belief, is not simply.</li>
+                    <li><img src="/images/icons/check.png" alt=""> Contrary to popular belief.</li>
+                    <li><img src="/images/icons/check.png" alt=""> Contrary to popular , is not simply.</li>
+                    <li><img src="/images/icons/check.png" alt=""> Contrary to popular belief, is not simply.</li>
+                    <li><img src="/images/icons/check.png" alt=""> Contrary to popular simply.</li>
+                </ul>
+            </div>
+        </div>
+        <div class="plans-parent-div">
+            <h2>My Plans</h2>
+            <ul class="plans-list-ul" id="plans-list-ul-img">
+                <li><img src="/images/icons/web.png" alt=""></li>
+                <li><img src="/images/icons/js.png" alt=""></li>
+                <li><img src="/images/icons/smoke.png" alt=""></li>
+                <li><img src="images/icons/ecom.png" alt=""></li>
+            </ul>
+
+
+            <ul class="plans-list-ul" id="plans-list-ul-plans">
+                <li>Web Development</li>
+                <li>Javascript </li>
+                <li>Smoking Habit</li>
+                <li>ecommerce</li>
+            </ul>
+            <ul class="plans-list-ul" id="plans-list-ul-descripsion">
+                <li>I want to start </li>
+                <li>I want to learn</li>
+                <li>I want to end</li>
+                <li>I want to develop</li>
+            </ul>
+
+        </div>
+        <div class="main-background-img-div">
+            <div class="main-background-child">
+                <h1>Awlays keep a positive mindset</h1>
+                <button class="btn-primary" id="call-now">Call Now</button>
+            </div>
+        </div>
+
     </main>
 
 
 
     <footer>
-
+        <div class="footer-conternar-div">
+            <h2>Future</h2>
+            <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration
+                in some form, by injected humour, or randomised words</p>
+            <h5>Email : info@gmail.com</h5>
+            <h5>Phone : 01500 00 00 00</h5>
+            <ul class="footer-icon">
+                <li><img src="/images/icons/fb.png" alt=""></li>
+                <li><img src="/images/icons/twitter.png" alt=""></li>
+                <li><img src="/images/icons/youtube.png" alt=""></li>
+            </ul>
+        </div>
+        <div class="footer-conternar-div">
+            <h3>Subscribe</h3>
+            <input type="email" placeholder="Enter your email">
+            <button class="btn-primary" id="submit">Subscribe</button>
+        </div>
     </footer>
 </body>
+
 </html>
