--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="header-div">
             <h3 class="headding-title">All Thinks Are Possible If You believe</h3>
             <p class="header-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words</p>
-            <button class="btn-primary">Contact Us</button>
+            <a href="/index-1.html" target="_blank"><button class="btn-primary">Contact Us</button></a>
          </div>
         
     </header>
